[package]
name = "core-dump-agent"
version = "8.4.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dotenv  = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
rust-s3 = { version = "0.27.0"}
advisory-lock = "0.3.0"
tokio-cron-scheduler = "0.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
inotify = "0.9"
thiserror = "1.0.30"

[dev-dependencies]
fs_extra = "1.2"