[package]
name = "core-dump-client"
version = "1.0.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2018"
description = "A client for debugging core-dump-handler output"
license = "MIT"
documentation = "https://docs.rs/core-dump-client"
homepage = "https://github.com/IBM/core-dump-handler/main/core-dump-client"
repository = "https://github.com/IBM/core-dump-handler/main/core-dump-client"

[[bin]]
name="cdcli"
path="./src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
log = "0.4.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
