[package]
name = "core-dump-composer"
version = "7.0.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.10"
advisory-lock = "0.3.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
zip = "0.5.13"
dotenv  = "0.15.0"
log = "0.4.14"
log4rs = "1.0.0"
anyhow = "1.0.53"
serde_json = "1.0.76"
serde = { version = "1.0.134", features = ["derive"] }
hostname = "0.3.1"
libcrio = "1.1.0"
tinytemplate = "1.2.1"

[dev-dependencies]
rand = "0.7.3"
