[package]
name = "core-dump-composer"
version = "9.0.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
advisory-lock = "0.3.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = "0.6.6"
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
anyhow = "1.0.86"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
hostname = "0.4.0"
libcrio = "2.1.0"
tinytemplate = "1.2.1"

[dev-dependencies]
rand = "0.8.5"
